--- a/SPAM CLASSIFICATION/Beginner_NLP_Tutorial_in_Python_new.ipynb
+++ b/SPAM CLASSIFICATION/Beginner_NLP_Tutorial_in_Python_new.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 77,
+      "execution_count": 109,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -89,7 +89,7 @@
               "4  00033.9babb58d9298daa2963d4f514193d7d6  "
             ]
           },
-          "execution_count": 77,
+          "execution_count": 109,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -106,7 +106,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 78,
+      "execution_count": 110,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -193,7 +193,7 @@
               "5795  00747.352d424267d36975a7b40b85ffd0885e  "
             ]
           },
-          "execution_count": 78,
+          "execution_count": 110,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -204,7 +204,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 79,
+      "execution_count": 111,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -222,7 +222,7 @@
               "Name: count, dtype: int64"
             ]
           },
-          "execution_count": 79,
+          "execution_count": 111,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -233,7 +233,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 80,
+      "execution_count": 112,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -260,7 +260,7 @@
               "True"
             ]
           },
-          "execution_count": 80,
+          "execution_count": 112,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -274,7 +274,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 81,
+      "execution_count": 113,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -298,7 +298,7 @@
               " 'badly']"
             ]
           },
-          "execution_count": 81,
+          "execution_count": 113,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -313,7 +313,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 82,
+      "execution_count": 114,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -337,7 +337,7 @@
               " 'badly']"
             ]
           },
-          "execution_count": 82,
+          "execution_count": 114,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -349,7 +349,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 83,
+      "execution_count": 115,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -373,7 +373,7 @@
               " 'badly']"
             ]
           },
-          "execution_count": 83,
+          "execution_count": 115,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -389,7 +389,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 84,
+      "execution_count": 116,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -404,7 +404,7 @@
               "['hey', 'gggggg', 'foot', 'going', 'html', 'bad', 'bad', 'randoms', 'badly']"
             ]
           },
-          "execution_count": 84,
+          "execution_count": 116,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -420,7 +420,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 85,
+      "execution_count": 117,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -435,7 +435,7 @@
               "['hey', 'gggggg', 'foot', 'going', 'html', 'bad', 'bad', 'randoms', 'badly']"
             ]
           },
-          "execution_count": 85,
+          "execution_count": 117,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -454,7 +454,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 86,
+      "execution_count": 118,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -522,7 +522,7 @@
               " [1160 rows x 3 columns])"
             ]
           },
-          "execution_count": 86,
+          "execution_count": 118,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -542,7 +542,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 87,
+      "execution_count": 119,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -557,7 +557,7 @@
               "86439"
             ]
           },
-          "execution_count": 87,
+          "execution_count": 119,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -579,7 +579,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 88,
+      "execution_count": 120,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1594,7 +1594,7 @@
               " ...}"
             ]
           },
-          "execution_count": 88,
+          "execution_count": 120,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1605,7 +1605,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 89,
+      "execution_count": 121,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1620,7 +1620,7 @@
               "False"
             ]
           },
-          "execution_count": 89,
+          "execution_count": 121,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1637,7 +1637,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 90,
+      "execution_count": 122,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1823,7 +1823,7 @@
               " 'year'}"
             ]
           },
-          "execution_count": 90,
+          "execution_count": 122,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1840,7 +1840,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 91,
+      "execution_count": 123,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2026,7 +2026,7 @@
               " 'go']"
             ]
           },
-          "execution_count": 91,
+          "execution_count": 123,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -2038,7 +2038,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 92,
+      "execution_count": 124,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2224,7 +2224,7 @@
               " 'go': 171}"
             ]
           },
-          "execution_count": 92,
+          "execution_count": 124,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -2236,7 +2236,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 93,
+      "execution_count": 125,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2251,7 +2251,7 @@
               "['3d', 'b', 'br', 'com', 'bad', 'font', 'font', 'com', 'randoms']"
             ]
           },
-          "execution_count": 93,
+          "execution_count": 125,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -2262,7 +2262,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 94,
+      "execution_count": 126,
       "metadata": {
         "id": "OuXO-Cjf4vNo"
       },
@@ -2273,7 +2273,7 @@
               "[0.0, 0.0, 0.0, 1.0, 2.0, 1.0, 2.0, 0.0, 0.0, 1.0]"
             ]
           },
-          "execution_count": 94,
+          "execution_count": 126,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -2290,7 +2290,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 95,
+      "execution_count": 127,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2315,7 +2315,7 @@
               "       0., 0.])"
             ]
           },
-          "execution_count": 95,
+          "execution_count": 127,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -2341,7 +2341,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 96,
+      "execution_count": 128,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2366,7 +2366,7 @@
               "       0., 0.])"
             ]
           },
-          "execution_count": 96,
+          "execution_count": 128,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -2377,7 +2377,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 97,
+      "execution_count": 129,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2395,7 +2395,7 @@
               "Name: 3, dtype: object"
             ]
           },
-          "execution_count": 97,
+          "execution_count": 129,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -2406,7 +2406,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 98,
+      "execution_count": 130,
       "metadata": {
         "id": "w3V5tgVbB_9K"
       },
@@ -2429,7 +2429,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 99,
+      "execution_count": 131,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2444,7 +2444,7 @@
               "((4636, 172), (4636,), (1160, 172), (1160,))"
             ]
           },
-          "execution_count": 99,
+          "execution_count": 131,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -2459,7 +2459,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 100,
+      "execution_count": 132,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2486,7 +2486,7 @@
               "        0.        ]])"
             ]
           },
-          "execution_count": 100,
+          "execution_count": 132,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -2503,9 +2503,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 108,
+      "execution_count": 133,
       "metadata": {},
       "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "c:\\Users\\fuadn\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\feature_extraction\\text.py:521: UserWarning: The parameter 'token_pattern' will not be used since 'tokenizer' is not None'\n",
+            "  warnings.warn(\n"
+          ]
+        },
         {
           "name": "stdout",
           "output_type": "stream",
@@ -2550,7 +2558,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 102,
+      "execution_count": 134,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2585,7 +2593,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 103,
+      "execution_count": 135,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2601,11 +2609,11 @@
             "              precision    recall  f1-score   support\n",
             "\n",
             "           0       0.98      0.99      0.99       788\n",
-            "           1       0.99      0.95      0.97       372\n",
+            "           1       0.99      0.97      0.98       372\n",
             "\n",
-            "    accuracy                           0.98      1160\n",
-            "   macro avg       0.98      0.97      0.98      1160\n",
-            "weighted avg       0.98      0.98      0.98      1160\n",
+            "    accuracy                           0.99      1160\n",
+            "   macro avg       0.99      0.98      0.98      1160\n",
+            "weighted avg       0.99      0.99      0.99      1160\n",
             "\n"
           ]
         }
@@ -2620,6 +2628,54 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 142,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "XGBoost with Bag of Words Classification Report:\n",
+            "\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.98      0.99      0.99       788\n",
+            "           1       0.98      0.97      0.97       372\n",
+            "\n",
+            "    accuracy                           0.98      1160\n",
+            "   macro avg       0.98      0.98      0.98      1160\n",
+            "weighted avg       0.98      0.98      0.98      1160\n",
+            "\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "c:\\Users\\fuadn\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\xgboost\\core.py:158: UserWarning: [14:34:31] WARNING: C:\\buildkite-agent\\builds\\buildkite-windows-cpu-autoscaling-group-i-0c55ff5f71b100e98-1\\xgboost\\xgboost-ci-windows\\src\\learner.cc:740: \n",
+            "Parameters: { \"use_label_encoder\" } are not used.\n",
+            "\n",
+            "  warnings.warn(smsg, UserWarning)\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Import necessary libraries\n",
+        "from xgboost import XGBClassifier\n",
+        "from sklearn.metrics import classification_report\n",
+        "\n",
+        "xgb_bow = XGBClassifier(use_label_encoder=False, eval_metric='logloss')\n",
+        "\n",
+        "xgb_bow.fit(X_train, y_train)\n",
+        "\n",
+        "xgb_predictions_bow = xgb_bow.predict(X_test)\n",
+        "\n",
+        "print(\"XGBoost with Bag of Words Classification Report:\\n\")\n",
+        "print(classification_report(y_test, xgb_predictions_bow))\n"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -2628,7 +2684,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 104,
+      "execution_count": 136,
       "metadata": {
         "id": "3vhIALXMEkb6"
       },
@@ -2671,14 +2727,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 105,
+      "execution_count": 137,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Training Random Forest...\n",
+            "Training Random Forest...\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
             "Random Forest Classification Report:\n",
             "\n",
             "              precision    recall  f1-score   support\n",
@@ -2708,6 +2770,58 @@
         "rf_predictions = rf_model.predict(X_test_tfidf)\n",
         "print(\"Random Forest Classification Report:\\n\")\n",
         "print(classification_report(y_test_tfidf, rf_predictions))\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 140,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "c:\\Users\\fuadn\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\xgboost\\core.py:158: UserWarning: [14:32:32] WARNING: C:\\buildkite-agent\\builds\\buildkite-windows-cpu-autoscaling-group-i-0c55ff5f71b100e98-1\\xgboost\\xgboost-ci-windows\\src\\learner.cc:740: \n",
+            "Parameters: { \"use_label_encoder\" } are not used.\n",
+            "\n",
+            "  warnings.warn(smsg, UserWarning)\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "XGBoost Classification Report:\n",
+            "\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.98      0.99      0.99       788\n",
+            "           1       0.98      0.97      0.97       372\n",
+            "\n",
+            "    accuracy                           0.98      1160\n",
+            "   macro avg       0.98      0.98      0.98      1160\n",
+            "weighted avg       0.98      0.98      0.98      1160\n",
+            "\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Import the XGBoost model\n",
+        "from xgboost import XGBClassifier\n",
+        "from sklearn.metrics import classification_report\n",
+        "\n",
+        "# Initialize the XGBoost model\n",
+        "xgb_model = XGBClassifier(use_label_encoder=False, eval_metric='logloss')\n",
+        "\n",
+        "# Train the model using TF-IDF features\n",
+        "xgb_model.fit(X_train_tfidf, y_train_tfidf)\n",
+        "\n",
+        "# Make predictions\n",
+        "xgb_predictions = xgb_model.predict(X_test_tfidf)\n",
+        "\n",
+        "# Print the classification report to evaluate the model's performance\n",
+        "print(\"XGBoost Classification Report:\\n\")\n",
+        "print(classification_report(y_test_tfidf, xgb_predictions))\n"
       ]
     }
   ],
