--- a/SPAM CLASSIFICATION/TEST.ipynb
+++ b/SPAM CLASSIFICATION/TEST.ipynb
@@ -488,14 +488,20 @@
         }
       ],
       "source": [
-        "df = df.sample(frac=1, random_state=1)\n",
-        "df = df.reset_index(drop=True)\n",
+        "from sklearn.model_selection import train_test_split\n",
         "\n",
-        "split_index = int(len(df) * 0.8)\n",
-        "train_df, test_df = df[:split_index], df[split_index:]\n",
+        "train_df, test_df = train_test_split(\n",
+        "    df,\n",
+        "    test_size=0.2,         # 20% of data will go to the test set\n",
+        "    stratify=df['target'], # Ensures proportional class distribution\n",
+        "    random_state=1         # Ensures reproducibility\n",
+        ")\n",
         "\n",
         "train_df = train_df.reset_index(drop=True)\n",
         "test_df = test_df.reset_index(drop=True)\n",
+        "\n",
+        "print(f\"Train shape: {train_df.shape}\")\n",
+        "print(f\"Test shape: {test_df.shape}\")\n",
         "\n",
         "train_df, test_df"
       ]
