--- a/SPAM CLASSIFICATION/TEST.ipynb
+++ b/SPAM CLASSIFICATION/TEST.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -82,7 +82,7 @@
               "4       4  software at incredibly low prices ( 86 % lower...         1"
             ]
           },
-          "execution_count": 4,
+          "execution_count": 1,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -99,7 +99,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -179,7 +179,7 @@
               "18633   18650                                              empty         1"
             ]
           },
-          "execution_count": 5,
+          "execution_count": 2,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -190,7 +190,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -208,7 +208,7 @@
               "Name: count, dtype: int64"
             ]
           },
-          "execution_count": 6,
+          "execution_count": 3,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -219,7 +219,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -246,7 +246,7 @@
               "True"
             ]
           },
-          "execution_count": 7,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -260,7 +260,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -284,7 +284,7 @@
               " 'badly']"
             ]
           },
-          "execution_count": 8,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -299,7 +299,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -323,7 +323,7 @@
               " 'badly']"
             ]
           },
-          "execution_count": 9,
+          "execution_count": 6,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -335,7 +335,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -359,7 +359,7 @@
               " 'badly']"
             ]
           },
-          "execution_count": 10,
+          "execution_count": 7,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -375,7 +375,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -390,7 +390,7 @@
               "['hey', 'gggggg', 'foot', 'going', 'html', 'bad', 'bad', 'randoms', 'badly']"
             ]
           },
-          "execution_count": 11,
+          "execution_count": 8,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -406,7 +406,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -421,7 +421,7 @@
               "['hey', 'gggggg', 'foot', 'going', 'html', 'bad', 'bad', 'randoms', 'badly']"
             ]
           },
-          "execution_count": 12,
+          "execution_count": 9,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -440,7 +440,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -450,41 +450,25 @@
       },
       "outputs": [
         {
-          "data": {
-            "text/plain": [
-              "(       SERIAL                                            MESSAGE  CATEGORY\n",
-              " 0       13454  fw : priority customer list this is not going ...         0\n",
-              " 1       14141  On Tue, 30 Jul 2002 22:22:24 +0200, \"Manfred G...         0\n",
-              " 2       17106  re : [ penetrative ] 86 % - off vicodin . dono...         1\n",
-              " 3       13497  btu ' s daily power report - eastern edition a...         0\n",
-              " 4       17348  On Tue, 27 Aug 2002, David Neary wrote:> > Act...         0\n",
-              " ...       ...                                                ...       ...\n",
-              " 14902    8884  -----Original Message----- > From: Aherne Pete...         0\n",
-              " 14903    7018  re : credit trading brought to you by bryan se...         0\n",
-              " 14904    9022  review of perez - leroux & glass ( ed ) contem...         0\n",
-              " 14905    6925  enron actuals for july 7 thru 9 , 2000 july 7 ...         0\n",
-              " 14906   13046  re : thursday visit frank , we shall have abou...         0\n",
-              " \n",
-              " [14907 rows x 3 columns],\n",
-              "       SERIAL                                            MESSAGE  CATEGORY\n",
-              " 0       3220  Note: \\r\\nThis is NOT SPAM!! This is NOT Unsol...         1\n",
-              " 1      15469  haul special offer ! you don ' t need to make ...         1\n",
-              " 2      13386  has a funky cut/paste model that is essentiall...         0\n",
-              " 3       8239  On 0020 -0700 %{!Thu, Sep 05, 2002 at  3:17:36...         0\n",
-              " 4       6388  v\\r\\nAmerica's #1 Government Grant Program!\\r\\...         1\n",
-              " ...      ...                                                ...       ...\n",
-              " 3722   10969  URL: http://www.newsisfree.com/click/-3,868897...         0\n",
-              " 3723   17306  Would You Like to Save up to 80\\r\\n Would You ...         1\n",
-              " 3724    5200  esslli workshop : lexical semantics in context...         0\n",
-              " 3725   12188  Dear Candidate,We recently came across a posti...         1\n",
-              " 3726     236  psycholinguistics & neurolinguistics linguisti...         0\n",
-              " \n",
-              " [3727 rows x 3 columns])"
-            ]
-          },
-          "execution_count": 13,
-          "metadata": {},
-          "output_type": "execute_result"
+          "ename": "KeyError",
+          "evalue": "'target'",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+            "File \u001b[1;32mc:\\Users\\fuadn\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:3805\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3804\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m-> 3805\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_engine\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcasted_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   3806\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
+            "File \u001b[1;32mindex.pyx:167\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
+            "File \u001b[1;32mindex.pyx:196\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
+            "File \u001b[1;32mpandas\\\\_libs\\\\hashtable_class_helper.pxi:7081\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
+            "File \u001b[1;32mpandas\\\\_libs\\\\hashtable_class_helper.pxi:7089\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
+            "\u001b[1;31mKeyError\u001b[0m: 'target'",
+            "\nThe above exception was the direct cause of the following exception:\n",
+            "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+            "Cell \u001b[1;32mIn[10], line 6\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodel_selection\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m train_test_split\n\u001b[0;32m      3\u001b[0m train_df, test_df \u001b[38;5;241m=\u001b[39m train_test_split(\n\u001b[0;32m      4\u001b[0m     df,\n\u001b[0;32m      5\u001b[0m     test_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.2\u001b[39m,         \u001b[38;5;66;03m# 20% of data will go to the test set\u001b[39;00m\n\u001b[1;32m----> 6\u001b[0m     stratify\u001b[38;5;241m=\u001b[39m\u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mtarget\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m, \u001b[38;5;66;03m# Ensures proportional class distribution\u001b[39;00m\n\u001b[0;32m      7\u001b[0m     random_state\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m         \u001b[38;5;66;03m# Ensures reproducibility\u001b[39;00m\n\u001b[0;32m      8\u001b[0m )\n\u001b[0;32m     10\u001b[0m train_df \u001b[38;5;241m=\u001b[39m train_df\u001b[38;5;241m.\u001b[39mreset_index(drop\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[0;32m     11\u001b[0m test_df \u001b[38;5;241m=\u001b[39m test_df\u001b[38;5;241m.\u001b[39mreset_index(drop\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
+            "File \u001b[1;32mc:\\Users\\fuadn\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pandas\\core\\frame.py:4102\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   4100\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mnlevels \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[0;32m   4101\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_multilevel(key)\n\u001b[1;32m-> 4102\u001b[0m indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   4103\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[0;32m   4104\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m [indexer]\n",
+            "File \u001b[1;32mc:\\Users\\fuadn\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:3812\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3807\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[0;32m   3808\u001b[0m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc\u001b[38;5;241m.\u001b[39mIterable)\n\u001b[0;32m   3809\u001b[0m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[0;32m   3810\u001b[0m     ):\n\u001b[0;32m   3811\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[1;32m-> 3812\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01merr\u001b[39;00m\n\u001b[0;32m   3813\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[0;32m   3814\u001b[0m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[0;32m   3815\u001b[0m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[0;32m   3816\u001b[0m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[0;32m   3817\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_indexing_error(key)\n",
+            "\u001b[1;31mKeyError\u001b[0m: 'target'"
+          ]
         }
       ],
       "source": [
